# extract-10k

./: README.md  main.py  pyproject.toml  requirements.txt
example/: output.json  sample_schema.json  schema.json
example/amazon/: amzn-20221231.html  extracted.txt  output.json
example/apple/: extracted.txt  output.json
example/meta/: extracted.txt
src/extract_10k/: __init__.py
src/extract_10k/core/: document_processor.py
src/extract_10k/utils/: output_handler.py
